# polycera_ccrm_github

./: readme.md
backend/: .gitignore  README.md  debug.py  deploy_new.py  main.py  pyproject.toml  update.py
backend/app/: factory.py  manage.py  mycache.py
backend/app/core/: config.py  depends.py  docx.py  email.py  email_async.py  errors.py  excel.py  jwt.py  mongodb_utils.py  secure.py  utils.py
backend/app/models/: __init__.py  all.py  base_model.py  base_pd.py  utils.py
backend/autodesign/core/: base_orm.py  config.py  const.py  decoretor.py  docx_tool.py  mongo_utils.py  utils.py
backend/autodesign/designs/: arrange.py  backflow.py  backwash copy.py  backwash.py  base_design.py  base_options.py  ceb.py  chem.py  cip.py  cir.py  dosing.py  flow_balance.py  flow_pipe.py  flowdc.py  info.py  main_balance.py  matter_balance.py  module_for_design.py  process.py  process1.py  pumps_pressure.py  raw_flow.py  real_feed_pressure.py  tanks.py  time.py  wash.py
backend/autodesign/doctpl/: polycera_design_scheme_tpl - 副本.docx  polycera_nf计算书_tpl.docx  polycera_uf方案_tpl.docx  polycera_uf计算书_tpl.docx  ~$lycera_uf方案_tpl.docx  ~$lycera_uf计算书_tpl.docx  中空纤维_uf计算书_tpl.docx
backend/autodesign/jsons/: chem.json  flat_product_catalog.json  ion.json  molecule.json  product_catalog.json
backend/autodesign/products/: base_class.py  base_product.py  get_product.py  (+2 more)
backend/jackutils/: currency_tool.py  dict_tool.py  excel_tool.py  fomulas.py  format.py  json_tool.py  list_tool.py  mongodb_util.py  mycounter.py  time_tool.py  units.py
backend/test/: test_main.py
(+280 files in other folders)
